Adjust spacings. Fix text are is back

--- a/snippets/user-area-navbar.css
+++ b/snippets/user-area-navbar.css
@@ -5,7 +5,7 @@
     /*width: calc(var(--custom-guild-sidebar-width) - var(--custom-guild-list-width) + 1px);;*/
     width: calc(var(--custom-guild-sidebar-width) - var(--custom-guild-list-width) - 15px);;
     left: calc(var(--custom-guild-list-width) + 2%);
-    bottom: 1.8%;
+    bottom: 1.3%;
     /*border-radius: 0px;*/
     /*border: none;*/
 }
